--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
                             <span class="not-view sidebar__count">1</span>
