--- a/lk-vladelec-sozdanie-sdelki-1.html
+++ b/lk-vladelec-sozdanie-sdelki-1.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
                             <span class="not-view sidebar__count">1</span>
@@ -175,11 +175,11 @@
                         <div class="container">
                             <div class="create-deal__main-content">
                                 <div class="request-menu create-deal__menu">
-                                    <a href="./lk-vladelec-sozdanie-sdelki-1.html" class="tab-btn tab-btn_request request-menu__link tab-btn_active">Общее</a>
-                                    <a href="./lk-vladelec-sozdanie-sdelki-2.html" class="tab-btn tab-btn_request request-menu__link tab-btn_selected">Русский</a>
-                                    <a href="#" class="tab-btn tab-btn_request request-menu__link tab-btn_selected">Английский</a>
-                                    <a href="#" class="tab-btn tab-btn_request request-menu__link tab-btn_selected">Казахский</a>
-                                    <a href="#" class="tab-btn tab-btn_request request-menu__link tab-btn_selected">Узбекский</a>
+                                    <a href="./lk-vladelec-sozdanie-sdelki-1.html" class="tab-btn request-menu__link tab-btn_active">Общее</a>
+                                    <a href="./lk-vladelec-sozdanie-sdelki-2.html" class="tab-btn request-menu__link tab-btn_selected">Русский</a>
+                                    <a href="#" class="tab-btn request-menu__link tab-btn_selected">Английский</a>
+                                    <a href="#" class="tab-btn request-menu__link tab-btn_selected">Казахский</a>
+                                    <a href="#" class="tab-btn request-menu__link tab-btn_selected">Узбекский</a>
                                 </div>
                                 <div class="create-deal__photos">
                                     <div class="lk-title1 lk-title1_blue create-deal__title">Фотографии</div>
@@ -451,7 +451,7 @@
                 </a>
             </div>
             <div class="mobile-menu__item">
-                <a href="#" class="mobile-menu__link">
+                <a href="./lk-notification.html" class="mobile-menu__link">
                     <div class="mobile-menu__icon-box">
                         <img src="dist/images/icons/sidebar/notification.svg" alt="" class="mobile-menu__icon">
                     </div>
