--- a/lk-vladelec-srok-publikacii.html
+++ b/lk-vladelec-srok-publikacii.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
     <link rel="stylesheet" href="dist/css/styles.css?v=101">
-    <title>iKapitalist - Форма подписания договора</title>
+    <title>iKapitalist - Срок публикации</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                             Портфель инвестора
                         </a>
                     </div>
-                    <div class="sidebar__item sidebar__item_active">
+                    <div class="sidebar__item">
                         <a href="./lk-vladelec-biznesa.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/case.svg" alt="" class="sidebar__icon">
                             Владелец бизнеса
@@ -66,7 +66,7 @@
                             Документы
                         </a>
                     </div>
-                    <div class="sidebar__item">
+                    <div class="sidebar__item sidebar__item_active">
                         <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
@@ -152,37 +152,27 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
-                            <div class="mobile-title lk-header__mobile-title">Форма подписания договора</div>
+                            <div class="mobile-title lk-header__mobile-title">Срок публикации</div>
                         </div>
                     </div>
                 </div>
             </header>
             <main class="lk-main">
                 <div class="container">
-                    <div class="request">
-                        <div class="request__header">
-                            <div class="lk-title1 lk-title-desktop request__title">Казпромтранс-сервис</div>
-                            <span class="status status_warning request__status">Необходимо подписать договор</span>
-                            <span class="request__date">23 авг. в 18:22</span>
-                        </div>
-                        <div class="request-menu request__menu">
-                            <a href="./lk-vladelec-zagruzka-doc.html" class="tab-btn request-menu__link tab-btn_selected">Документы компании</a>
-                            <a href="./lk-vladelec-zayavka.html" class="tab-btn request-menu__link tab-btn_selected">Заявка</a>
-                            <a href="#" class="tab-btn request-menu__link tab-btn_selected">Отчетность</a>
-                            <a href="#" class="tab-btn request-menu__link tab-btn_selected">Документы</a>
-                            <a href="#" class="tab-btn request-menu__link">Договоры</a>
-                            <a href="#" class="tab-btn request-menu__link">Публикация</a>
-                        </div>
-                        <div class="request__main">
+                    <div class="publicate-term">
+                        <h1 class="lk-title1">До истечения срока публикации осталось: 29 дней 9 часов 39 минут</h1>
+                        <div class="publicate-term__body">
                             <div class="row">
-                                <div class="col-xl-8">
-                                    <div class="contract-form contract-form_error request__contract-form">
-                                        <h1 class="lk-title1 lk-title-desktop contract-form__title">Форма подписания договора</h1>
-                                        <h3 class="lk-title3 contract-form__title3">Ознакомтесь с содержимым договора</h3>
-                                        <div class="agreement-elem contract-form__agreement">Договор с компанией об оказании услуг по размешению информации и привлечению инвестирования</div>
-                                        <div class="contract-form__footer">
-                                            <button class="lk-btn lk-btn_mobile_fixed contract-form__submit">Подписать</button>
-                                            <div class="error-text contract-form__error-text">Подписывает директор!</div>
+                                <div class="col-lg-8">
+                                    <h3 class="lk-title3 publicate-term__title3">Срок публикации с 17.09.2021 по 17.10.2021</h3>
+                                    <div class="publicate-term__footer">
+                                        <div class="row gy-1">
+                                            <div class="col-md-6">
+                                                <button class="lk-btn lk-btn_white lk-btn_full">Снять с публикации</button>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <button class="lk-btn lk-btn_full">Изменить срок публикации</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
