--- a/lk-vladelec-zagruzka-doc-2.html
+++ b/lk-vladelec-zagruzka-doc-2.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
                             <span class="not-view sidebar__count">1</span>
@@ -166,12 +166,12 @@
                             <span class="request__date">23 авг. в 18:22</span>
                         </div>
                         <div class="request-menu request__menu">
-                            <a href="./lk-vladelec-zagruzka-doc.html" class="tab-btn tab-btn_request request-menu__link tab-btn_active">Документы компании</a>
-                            <a href="./lk-vladelec-zayavka.html" class="tab-btn tab-btn_request request-menu__link">Заявка</a>
-                            <a href="./lk-vladelec-otchet.html" class="tab-btn tab-btn_request request-menu__link">Отчетность</a>
-                            <a href="./lk-vladelec-docs.html" class="tab-btn tab-btn_request request-menu__link">Документы</a>
-                            <a href="./lk-vladelec-contracts.html" class="tab-btn tab-btn_request request-menu__link">Договоры</a>
-                            <a href="#" class="tab-btn tab-btn_request request-menu__link">Публикация</a>
+                            <a href="./lk-vladelec-zagruzka-doc.html" class="tab-btn request-menu__link tab-btn_active">Документы компании</a>
+                            <a href="./lk-vladelec-zayavka.html" class="tab-btn request-menu__link">Заявка</a>
+                            <a href="./lk-vladelec-otchet.html" class="tab-btn request-menu__link">Отчетность</a>
+                            <a href="./lk-vladelec-docs.html" class="tab-btn request-menu__link">Документы</a>
+                            <a href="./lk-vladelec-contracts.html" class="tab-btn request-menu__link">Договоры</a>
+                            <a href="#" class="tab-btn request-menu__link">Публикация</a>
                         </div>
                         <div class="request__main">
                             <div class="row justify-content-between">
@@ -510,7 +510,7 @@
                 </a>
             </div>
             <div class="mobile-menu__item">
-                <a href="#" class="mobile-menu__link">
+                <a href="./lk-notification.html" class="mobile-menu__link">
                     <div class="mobile-menu__icon-box">
                         <img src="dist/images/icons/sidebar/notification.svg" alt="" class="mobile-menu__icon">
                     </div>
