--- a/lk-payment.html
+++ b/lk-payment.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
                             <span class="not-view sidebar__count">1</span>
@@ -160,7 +160,7 @@
             <main class="lk-main">
                 <div class="container">
                     <div class="payment">
-                        <h1 class="lk-title1">Процесс оплаты</h1>
+                        <h1 class="lk-title1 lk-title-desktop">Процесс оплаты</h1>
                         <div class="payment__body">
                             <div class="row">
                                 <div class="col-xl-7">
@@ -286,7 +286,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="lk-btn pay-sidebar__submit">Отправить заявку</button>
+                                        <button class="lk-btn lk-btn_mobile_fixed pay-sidebar__submit">Отправить заявку</button>
                                     </div>
                                 </div>
                             </div>
