--- a/lk-vladelec-biznesa.html
+++ b/lk-vladelec-biznesa.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="sidebar__item">
-                        <a href="#" class="sidebar__link">
+                        <a href="./lk-notification.html" class="sidebar__link">
                             <img src="dist/images/icons/sidebar/notification.svg" alt="" class="sidebar__icon">
                             Уведомления
                             <span class="not-view sidebar__count">1</span>
@@ -164,7 +164,7 @@
                                         <img src="dist/images/icons/search.svg" alt="Search">
                                     </button>
                                 </div>
-                                <a href="./lk-dobavit-kompanyu.html" class="lk-btn lk-owner__create">Создать заявку</a>
+                                <a href="./lk-dobavit-kompanyu.html" class="lk-btn lk-btn_mobile_fixed lk-owner__create">Создать заявку</a>
                             </div>
                         </div>
                         <div class="table lk-owner__table">
@@ -239,6 +239,7 @@
                                         <button class="filter-btn filter-btn_export filter-menu__btn table__filter-btn">Экспортировать</button>
                                     </div>
                                 </div>
+                                <button class="lk-btn lk-btn_mobile_fixed add-menu__submit">Показать 21</button>
                             </div>
                             <div class="table__wrapper">
                                 <table class="table__main">
