--- a/lk-notification.html
+++ b/lk-notification.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
-    <link rel="stylesheet" href="dist/css/styles.css?v=101">
+    <link rel="stylesheet" href="dist/css/styles.css?v=102">
     <title>iKapitalist - Уведомления</title>
 </head>
 
@@ -375,7 +375,15 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/common.js?v=101"></script>
+    <div class="email-popup">
+        <div class="email-popup__content">
+            <div class="email-popup__icon"></div>
+            <div class="email-popup__text">Email  подтвержден</div>
+            <button class="lk-btn email-popup__submit">Отлично</button>
+            <button class="close-btn email-popup__close"></button>
+        </div>
+    </div>
+    <script src="dist/js/common.js?v=102"></script>
 </body>
 
 </html>
