hide email popup

--- a/lk-notification.html
+++ b/lk-notification.html
@@ -375,14 +375,14 @@
             </div>
         </div>
     </div>
-    <div class="email-popup">
+    <!-- <div class="email-popup">
         <div class="email-popup__content">
             <div class="email-popup__icon"></div>
             <div class="email-popup__text">Email  подтвержден</div>
             <button class="lk-btn email-popup__submit">Отлично</button>
             <button class="close-btn email-popup__close"></button>
         </div>
-    </div>
+    </div> -->
     <script src="dist/js/common.js?v=102"></script>
 </body>
 
