--- a/lk-vladelec-vse-dogovora.html
+++ b/lk-vladelec-vse-dogovora.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="dist/images/ico.png">
     <link rel="stylesheet" href="dist/css/styles.css?v=102">
-    <title>iKapitalist - Ве договора с инвесторами и графики</title>
+    <title>iKapitalist - Все договора с инвесторами и графики</title>
 </head>
 
 <body>
